tests/snapshots/simple_additions__ai_adds_lines_and_human_deletes_most_of_them.snap
---
source: tests/simple_additions.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [
        FileAttestation {
            file_path: "empty_replacement.ts",
            entries: [
                AttestationEntry {
                    hash: "1cee1d9",
                    line_ranges: [
                        Range(
                            2,
                            3,
                        ),
                    ],
                },
            ],
        },
    ],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "initial",
        prompts: {
            "1cee1d9": PromptRecord {
                agent_id: AgentId {
                    tool: "cursor",
                    id: "test_session_fixed",
                    model: "claude-3-sonnet",
                },
                human_author: Some(
                    "Test User <test@example.com>",
                ),
                messages: [],
                total_additions: 4,
                total_deletions: 0,
                accepted_lines: 2,
            },
        },
    },
}
