tests/snapshots/simple_additions__ai_human_interleaved_line_attribution-2.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "some-ai",
    2: "Test User",
    3: "some-ai",
    4: "some-ai",
    5: "some-ai",
}
