tests/snapshots/simple_additions__ai_prepending_lines.snap
---
source: tests/simple_additions.rs
expression: blame
---
{
    1: "Test User",
    2: "cursor",
    3: "cursor",
    4: "Test User",
    5: "Test User",
}
